agregar footer con estilos

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 </section>
 <script src=".//js/carrusel.js"></script>
 <script src=".//js/calendario.js"></script>
-</body>
 
+<!--Footer-->
+<footer style="background-color: #232f3e; color: white; padding: 20px; text-align: center; margin-top: 20px;">
+    <div style="margin-bottom: 10px;">
+        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Condiciones de Uso</a>
+        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Política de Privacidad</a>
+        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Ayuda</a>
+    </div>
+    <p style="margin: 0;">&copy; 2024 Planificador de Cultivos. Todos los derechos reservados.</p>
+</footer>
+<!--Final footer-->
+
+</body>
 </html>
