--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div class="slider-container">
         <div class="slides">
             <div class="slide">
-                <img src="" alt="Empanada 1">
+                <img src="" alt="Cultivo 1">
             </div>
             <div class="slide">
-                <img src="" alt="Empanada 2">
+                <img src="" alt="Cultivo 2">
             </div>
             <div class="slide">
-                <img src="" alt="Empanada 3">
+                <img src="" alt="Cultivo 3">
             </div>
         </div>
         <span class="prev" onclick="moveSlide(-1)">&#10094;</span>
@@ -51,7 +51,6 @@
             <span id="current-month">Marzo 2024</span>
             <button onclick="navigateMonth(1)">Mes Siguiente &gt;</button>
         </div>
-
         <div class="calendar" id="calendar"></div>
     <!-- Fin Calendario -->
 
@@ -83,6 +82,9 @@
     </div>
     <!--Final formulario-->
 </section>
+
+
+<!-- Scripts JS -->
 <script src=".//js/carrusel.js"></script>
 <script src=".//js/calendario.js"></script>
 
