--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
 
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -11,7 +12,7 @@
 <body>
 <!-- Encabezado -->
 <header>
-    <nav>
+    <nav >
         <a href=""><img src="" alt=""></a>
         <ul>
             <li><a href="">Calendario</a></li>
