cambio de posicion del menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Encabezado -->
 <header>
-    <nav >
+    <nav "menu" >
         <a href=""><img src="" alt=""></a>
         <ul>
             <li><a href="">Calendario</a></li>
