--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 <!-- Encabezado -->
 <header>
-    <nav "menu" >
+    <nav  >
         <a href=""><img src="" alt=""></a>
-        <ul>
+        <ul "menu 2">
             <li><a href="">Calendario</a></li>
             <li><a href="">Cultivos</a></li>
             <li><a href="">Contactos</a></li>
