--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <nav  >
         <a href=""><img src="" alt=""></a>
-        <ul "menu 2">
+        <ul "menu">
             <li><a href="">Calendario</a></li>
             <li><a href="">Cultivos</a></li>
             <li><a href="">Contactos</a></li>
