--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Encabezado -->
 <header>
     <nav  >
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="agro_lab.png" alt=""></a>
         <ul>
             <li><a href="">Calendario</a></li>
             <li><a href="">Cultivos</a></li>
