--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <header>
   
     <nav  >
+        <a href=""><img src="agro_lab.png" alt=""></a>
         <ul>
             <li><a href="">Calendario</a></li>
             <li><a href="">Cultivos</a></li>
