--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   
     <nav  >
-        <a href=""><img src="agro_lab.png" alt=""></a>
+        <img src="agro_lab.png" alt="">
         <ul>
             <li><a href="">Calendario</a></li>
             <li><a href="">Cultivos</a></li>
