--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -13,7 +13,6 @@
 <header>
   
     <nav  >
-      
         <ul>
             <li><a href="#calendario">Calendario</a></li>
             <li><a href="#cultivos">Cultivos</a></li>
