--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,13 +28,13 @@
     <div class="slider-container">
         <div class="slides">
             <div class="slide">
-                <img src="" alt="Cultivo 1">
+                <img src="cultivo 1.jpg" alt="Cultivo 1">
             </div>
             <div class="slide">
-                <img src="" alt="Cultivo 2">
+                <img src="cultivo 2.jpg" alt="Cultivo 2">
             </div>
             <div class="slide">
-                <img src="" alt="Cultivo 3">
+                <img src="cultivo 3.jpg" alt="Cultivo 3">
             </div>
         </div>
         <span class="prev" onclick="moveSlide(-1)">&#10094;</span>
