--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Encabezado -->
 <header>
-  
+  <section>
     <nav  >
         <ul>
             <li><a href="#calendario">Calendario</a></li>
@@ -20,6 +20,8 @@
             <li><a href="#contactos">Contactos</a></li>
         </ul>
     </nav>
+  </section>
+    
 </header>
 <!-- Fin Encabezado -->
 
