--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Encabezado -->
 <header>
-  <section>
+  <section class="menu">
     <nav  >
         <ul>
             <li><a href="#calendario">Calendario</a></li>
