--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -107,8 +107,8 @@
 <!--Final footer-->
 
 <!-- Scripts JS -->
-<script src=".//js/carrusel.js"></script>
-<script src=".//js/calendario.js"></script>
+<script src="carrusel.js"></script>
+<script src="calendario.js"></script>
 
 </body>
 </html>
