--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <!-- Encabezado -->
 <header>
-  <section class="menu">
-    <nav  >
+    <nav>
+        <a href=""><img src=".//img/agro_lab.png" alt=""></a>
         <ul>
             <li><a href="#calendario">Calendario</a></li>
             <li><a href="#cultivos">Cultivos</a></li>
@@ -30,13 +30,13 @@
     <div class="slider-container">
         <div class="slides">
             <div class="slide">
-                <img src="cultivo 1.jpg" alt="Cultivo 1">
+                <img src=".//img/cultivo1.jpg" alt="Cultivo 1">
             </div>
             <div class="slide">
-                <img src="cultivo 2.jpg" alt="Cultivo 2">
+                <img src=".//img/cultivo2.jpg" alt="Cultivo 2">
             </div>
             <div class="slide">
-                <img src="cultivo 3.jpg" alt="Cultivo 3">
+                <img src=".//img/cultivo3.jpg" alt="Cultivo 3">
             </div>
         </div>
         <span class="prev" onclick="moveSlide(-1)">&#10094;</span>
