correcion css en linea de codigo

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 </section>
 
 <!--Footer-->
-<footer id="contactos" style="background-color: #232f3e; color: white; padding: 20px; text-align: center; margin-top: 20px;">
-    <div style="margin-bottom: 10px;">
-        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Condiciones de Uso</a>
-        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Política de Privacidad</a>
-        <a href="#" style="color: white; text-decoration: none; margin: 0 15px;">Ayuda</a>
+<footer id="contactos">
+    <div>
+        <a href="#">Condiciones de Uso</a>
+        <a href="#">Política de Privacidad</a>
+        <a href="#">Ayuda</a>
     </div>
-    <p style="margin: 0;">&copy; 2024 Planificador de Cultivos. Todos los derechos reservados.</p>
+    <p>&copy; 2024 Planificador de Cultivos. Todos los derechos reservados.</p>
 </footer>
 <!--Final footer-->
 
