actualizar footer y estilos en css

--- a/index.html
+++ b/index.html
@@ -95,8 +95,12 @@
     </div>
 </section>
 
-<!--Footer-->
-<footer id="contactos">
+<!-- Scripts JS -->
+<script src="carrusel.js"></script>
+<script src="calendario.js"></script>
+
+<!-- Footer -->
+<footer>
     <div>
         <a href="#">Condiciones de Uso</a>
         <a href="#">Política de Privacidad</a>
@@ -104,11 +108,7 @@
     </div>
     <p>&copy; 2024 Planificador de Cultivos. Todos los derechos reservados.</p>
 </footer>
-<!--Final footer-->
-
-<!-- Scripts JS -->
-<script src="carrusel.js"></script>
-<script src="calendario.js"></script>
+<!-- Final footer -->
 
 </body>
 </html>
